[package]
name = "poke-agent"
version = "0.1.0"
authors = ["Quentin ADAM <quentin.adam@waxzce.org>"]

[dependencies]
reqwest = "0.8.1"
structopt = "0.1.0"
structopt-derive = "0.1.0"
time = "0.1.38"
rand = "0.3.18"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "^0.1"
tokio-core = "^0.1"
uuid = { version = "0.4", features = ["serde", "v4"] }
warp10 = "0.10.0"
rdkafka = { version = "0.14.0", features = [ "ssl", "sasl", "dynamic_linking" ] }
log = "^0.3"
futures-cpupool = "*"
env_logger = "*"
toml = "0.4"
