[package]
name = "poke-agent"
version = "0.1.0"
authors = ["Quentin ADAM <quentin.adam@waxzce.org>"]

[dependencies]
reqwest = "^0.9"
structopt = "^0.2"
structopt-derive = "^0.2"
time = "^0.1.38"
rand = "^0.6"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
futures = "^0.1"
tokio = "^0.1"
warp10 = "^0.11"
rdkafka = { version = "^0.19", features = [ "ssl", "sasl", "dynamic_linking" ] }
log = "^0.4"
futures-cpupool = "^0.1"
env_logger = "^0.6"
toml = "^0.4"
